@@ -728,6 +728,8 @@ Release 2.5.0 - UNRELEASED
     HADOOP-10701. NFS should not validate the access premission only based on
     the user's primary group (Harsh J via atm)
 
+    HDFS-6556. Refine XAttr permissions (umamahesh)
+
   BREAKDOWN OF HDFS-2006 SUBTASKS AND RELATED JIRAS
 
     HDFS-6299. Protobuf for XAttr and client-side implementation. (Yi Liu via umamahesh)
